--- a/classification.ipynb
+++ b/classification.ipynb
@@ -53,11 +53,188 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Carregando os dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Sexo</th>\n",
+       "      <th>Tipo dor</th>\n",
+       "      <th>Pressao arterial</th>\n",
+       "      <th>Colesterol</th>\n",
+       "      <th>Glicemia jejum &gt;120</th>\n",
+       "      <th>Resultados ECG</th>\n",
+       "      <th>Frequencia cardiaca max</th>\n",
+       "      <th>Dor exercicio</th>\n",
+       "      <th>Depressao ST</th>\n",
+       "      <th>Inclinacao ST</th>\n",
+       "      <th>Numero vasos fluro</th>\n",
+       "      <th>Teste cintilografia</th>\n",
+       "      <th>Doenca cardiaca</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>130</td>\n",
+       "      <td>322</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>109</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Presenca</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>67</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>115</td>\n",
+       "      <td>564</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>160</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Ausencia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>57</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>124</td>\n",
+       "      <td>261</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>141</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Presenca</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>64</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>128</td>\n",
+       "      <td>263</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>105</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Ausencia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>74</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>120</td>\n",
+       "      <td>269</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>121</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Ausencia</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Idade  Sexo  Tipo dor  Pressao arterial  Colesterol  Glicemia jejum >120  \\\n",
+       "0     70     1         4               130         322                    0   \n",
+       "1     67     0         3               115         564                    0   \n",
+       "2     57     1         2               124         261                    0   \n",
+       "3     64     1         4               128         263                    0   \n",
+       "4     74     0         2               120         269                    0   \n",
+       "\n",
+       "   Resultados ECG  Frequencia cardiaca max  Dor exercicio  Depressao ST  \\\n",
+       "0               2                      109              0           2.4   \n",
+       "1               2                      160              0           1.6   \n",
+       "2               0                      141              0           0.3   \n",
+       "3               0                      105              1           0.2   \n",
+       "4               2                      121              1           0.2   \n",
+       "\n",
+       "   Inclinacao ST  Numero vasos fluro  Teste cintilografia Doenca cardiaca  \n",
+       "0              2                   3                    3        Presenca  \n",
+       "1              2                   0                    7        Ausencia  \n",
+       "2              1                   0                    7        Presenca  \n",
+       "3              2                   1                    7        Ausencia  \n",
+       "4              1                   1                    3        Ausencia  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "url = 'https://raw.githubusercontent.com/alura-cursos/classificacao_xgboost/main/Dados/doenca_cardiaca.csv'\n",
+    "df = pd.read_csv(url)\n",
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "``"
+   ]
   }
  ],
  "metadata": {
@@ -67,7 +244,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.3"
   }
  },
