--- a/classification.ipynb
+++ b/classification.ipynb
@@ -11500,6 +11500,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.86      0.80      0.83        30\n",
+      "           1       0.77      0.83      0.80        24\n",
+      "\n",
+      "    accuracy                           0.81        54\n",
+      "   macro avg       0.81      0.82      0.81        54\n",
+      "weighted avg       0.82      0.81      0.82        54\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xgboost as xgb\n",
+    "\n",
+    "model_xgb = xgb.XGBClassifier(objective='binary:logistic')\n",
+    "model_xgb.fit(X_treino, y_treino)\n",
+    "preds = model_xgb.predict(X_teste)\n",
+    "report = classification_report(y_teste, preds)\n",
+    "print(report)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
