implementando validação cruzada com xgboost

--- a/classification.ipynb
+++ b/classification.ipynb
@@ -11619,9 +11619,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia: 0.83\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -11778,7 +11785,7 @@
        "14          0.007407         0.002619         0.170370        0.013858"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11789,7 +11796,176 @@
     "\n",
     "cv_resultados = xgb.cv(dtrain=dmatrix, params=params, nfold=3,\n",
     "                       num_boost_round=15, metrics='error', as_pandas=True, seed=0)\n",
+    "acucaria = 1 - cv_resultados['test-error-mean'].iloc[-1]\n",
+    "print(f'Acurácia: {acucaria:.2f}')\n",
+    "cv_resultados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia: 0.84\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>train-error-mean</th>\n",
+       "      <th>train-error-std</th>\n",
+       "      <th>test-error-mean</th>\n",
+       "      <th>test-error-std</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.125926</td>\n",
+       "      <td>0.014581</td>\n",
+       "      <td>0.255556</td>\n",
+       "      <td>0.050512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.079630</td>\n",
+       "      <td>0.020951</td>\n",
+       "      <td>0.240741</td>\n",
+       "      <td>0.040909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.072222</td>\n",
+       "      <td>0.004536</td>\n",
+       "      <td>0.196296</td>\n",
+       "      <td>0.034347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.064815</td>\n",
+       "      <td>0.006929</td>\n",
+       "      <td>0.174074</td>\n",
+       "      <td>0.034347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.048148</td>\n",
+       "      <td>0.006929</td>\n",
+       "      <td>0.185185</td>\n",
+       "      <td>0.010476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.040741</td>\n",
+       "      <td>0.006929</td>\n",
+       "      <td>0.177778</td>\n",
+       "      <td>0.024003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.033333</td>\n",
+       "      <td>0.004536</td>\n",
+       "      <td>0.185185</td>\n",
+       "      <td>0.026189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.029630</td>\n",
+       "      <td>0.013858</td>\n",
+       "      <td>0.181481</td>\n",
+       "      <td>0.029163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.024074</td>\n",
+       "      <td>0.011416</td>\n",
+       "      <td>0.170370</td>\n",
+       "      <td>0.022831</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.022222</td>\n",
+       "      <td>0.012001</td>\n",
+       "      <td>0.174074</td>\n",
+       "      <td>0.022831</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.020370</td>\n",
+       "      <td>0.006929</td>\n",
+       "      <td>0.177778</td>\n",
+       "      <td>0.018144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.018519</td>\n",
+       "      <td>0.009443</td>\n",
+       "      <td>0.174074</td>\n",
+       "      <td>0.018885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.014815</td>\n",
+       "      <td>0.002619</td>\n",
+       "      <td>0.159259</td>\n",
+       "      <td>0.005238</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    train-error-mean  train-error-std  test-error-mean  test-error-std\n",
+       "0           0.125926         0.014581         0.255556        0.050512\n",
+       "1           0.079630         0.020951         0.240741        0.040909\n",
+       "2           0.072222         0.004536         0.196296        0.034347\n",
+       "3           0.064815         0.006929         0.174074        0.034347\n",
+       "4           0.048148         0.006929         0.185185        0.010476\n",
+       "5           0.040741         0.006929         0.177778        0.024003\n",
+       "6           0.033333         0.004536         0.185185        0.026189\n",
+       "7           0.029630         0.013858         0.181481        0.029163\n",
+       "8           0.024074         0.011416         0.170370        0.022831\n",
+       "9           0.022222         0.012001         0.174074        0.022831\n",
+       "10          0.020370         0.006929         0.177778        0.018144\n",
+       "11          0.018519         0.009443         0.174074        0.018885\n",
+       "12          0.014815         0.002619         0.159259        0.005238"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dmatrix = xgb.DMatrix(data=X, label=y)\n",
+    "params = {'objective': 'binary:logistic'}\n",
     "\n",
+    "cv_resultados = xgb.cv(dtrain=dmatrix, params=params, nfold=3,\n",
+    "                       num_boost_round=100, early_stopping_rounds=5, metrics='error', as_pandas=True, seed=0)\n",
+    "acucaria = 1 - cv_resultados['test-error-mean'].iloc[-1]\n",
+    "print(f'Acurácia: {acucaria:.2f}')\n",
     "cv_resultados"
    ]
   },
