implementando grid search cv com xgboost

--- a/classification.ipynb
+++ b/classification.ipynb
@@ -12022,6 +12022,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GridSearchCV com XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Melhores parâmetros:  {'colsample_bytree': 0.1, 'learning_rate': 0.1, 'max_depth': 2, 'n_estimators': 50}\n",
+      "Acurácia:  0.8471458773784354\n",
+      "Acurácia de teste:  0.7962962962962963\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "params = {\n",
+    "        'learning_rate': [0.1, 0.2, 0.3],\n",
+    "        'max_depth': [0, 2, 4, 6, 10], \n",
+    "        'colsample_bytree': [0.1, 0.5, 1],\n",
+    "        'n_estimators': [10, 25, 50],\n",
+    "}\n",
+    "\n",
+    "model_xgb = xgb.XGBClassifier()\n",
+    "\n",
+    "grid_search_cv = GridSearchCV(estimator=model_xgb, param_grid=params, cv=5, scoring=\"accuracy\")\n",
+    "grid_search_cv.fit(X_treino, y_treino)\n",
+    "\n",
+    "print(\"Melhores parâmetros: \", grid_search_cv.best_params_)\n",
+    "print(\"Acurácia: \", grid_search_cv.best_score_)\n",
+    "print(\"Acurácia de teste: \", grid_search_cv.best_estimator_.score(X_teste, y_teste))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
