--- a/classification.ipynb
+++ b/classification.ipynb
@@ -12162,6 +12162,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Criando uma Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Melhor estimador:  Pipeline(steps=[('xgboost',\n",
+      "                 XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
+      "                               colsample_bylevel=None, colsample_bynode=None,\n",
+      "                               colsample_bytree=0.1, device=None,\n",
+      "                               early_stopping_rounds=None,\n",
+      "                               enable_categorical=False, eval_metric=None,\n",
+      "                               feature_types=None, gamma=None, grow_policy=None,\n",
+      "                               importance_type=None,\n",
+      "                               interaction_constraints=None, learning_rate=0.3,\n",
+      "                               max_bin=None, max_cat_threshold=None,\n",
+      "                               max_cat_to_onehot=None, max_delta_step=None,\n",
+      "                               max_depth=2, max_leaves=None,\n",
+      "                               min_child_weight=None, missing=nan,\n",
+      "                               monotone_constraints=None, multi_strategy=None,\n",
+      "                               n_estimators=25, n_jobs=None,\n",
+      "                               num_parallel_tree=None, random_state=None, ...))])\n",
+      "Acurácia:  0.8424947145877377\n",
+      "Acurácia de teste:  0.8333333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "pipeline = Pipeline([(\"xgboost\", xgb.XGBClassifier())])\n",
+    "\n",
+    "xgb_param_grid = {\n",
+    "    'xgboost__learning_rate': [0.1, 0.2, 0.3],\n",
+    "    'xgboost__max_depth': [0, 2, 4, 6, 10],\n",
+    "    'xgboost__colsample_bytree': [0.1, 0.5, 1],\n",
+    "    'xgboost__n_estimators': [10, 25, 50]\n",
+    "}\n",
+    "\n",
+    "random_search_cv = RandomizedSearchCV(estimator=pipeline, param_distributions=xgb_param_grid, n_iter=50, cv=5, scoring=\"accuracy\")\n",
+    "random_search_cv.fit(X_treino, y_treino)\n",
+    "\n",
+    "print(\"Melhor estimador: \", random_search_cv.best_estimator_)\n",
+    "print(\"Acurácia: \", random_search_cv.best_score_)\n",
+    "print(\"Acurácia de teste: \", random_search_cv.best_estimator_.score(X_teste, y_teste))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
